[Refactoring & Feature Addition] New feature for an EventStormingTemplate by API, and refactoring the algorithm for Event2AI.